--- a/src/main/resources/templates/playlist/list.html
+++ b/src/main/resources/templates/playlist/list.html
@@ -49,8 +49,8 @@
                 </td>
                 <td th:text="${playlist.descricao}">descricao</td>
                 <td>
-                    <a class="btn btn-sm btn-info">Editar</a>
-                    <a class="btn btn-sm btn-danger">Excluir</a>
+                    <a class="btn btn-sm btn-info" th:href="@{/playlists/{id}/atualizar(id=${playlist.id})}">Editar</a>
+                    <a class="btn btn-sm btn-danger" th:href="@{/playlists/{id}/remover(id=${playlist.id})}">Excluir</a>
                 </td>
             </tr>
         </table>
